# k-green-signal

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  app.py  cspell.json  external_context.json  logging.md  main.py  mapping_review.csv  plan.md  pyproject.toml  requirements.txt
curation/: external_context.json  implications.json  mapping_review.csv  methodology_notes.json
docs/: ADD_YEAR.md  ARCHITECTURE.md  DECISIONS.md  LOGGING.md  PLAN.md
eval/: questions.jsonl  run_eval.py
rag/: answer.py  chunking.py  config.py  corrections.py  dedup.py  extract.py  extract_vision.py  extract_vision_oldtable.py  flags.py  index.py  ingestion.py  integrate_oldyears.py  logging_setup.py  parsing.py  paths.py  pipeline.py  refill_vision.py  refine.py  retriever.py  review.py  routing.py  signals.py  standardize.py  std_aliases.py  validate.py
rag/core/: config.py  logging_setup.py  paths.py
rag/curate/: adjudicate.py  corrections.py  external_context.py  external_search.py  implications.py  integrate_oldyears.py  methodology.py  refill_vision.py  validate.py
rag/ingest/: extract.py  extract_vision.py  extract_vision_oldtable.py  ingestion.py  parsing.py
rag/retrieval/: answer.py  chunking.py  index.py  retriever.py  routing.py
rag/transform/: dedup.py  flags.py  refine.py  review.py  standardize.py  std_aliases.py
samples/data/: README.md
samples/outputs/: .dataset_version  2023년 인지도조사 결과보고서.extracted.jsonl  2024년 친환경 생활 소비 국민 인지도 조사 결과보고서.extracted.jsonl  2025년 친환경생활·소비 국민 인지도 조사 결과보고서.extracted.jsonl  chunks.jsonl  corrections.jsonl  dedup_log.csv  question_dictionary.json  response_label_map.json  review_queue.csv  standardized_long.clean.csv  standardized_long.csv  standardized_long.dedup.csv  standardized_long.flagged.csv
samples/outputs/chroma/: chroma.sqlite3
scripts/: bootstrap_samples.py
tests/: test_advise_parse.py  test_bugfixes.py  test_cloud_guard.py  test_corrections_inject.py  test_eval.py  test_external_search.py  test_gate_adjudicate.py  test_integrate_worksheet.py  test_pipeline_recovery.py  test_real_llm.py  test_restore.py  test_routing.py  test_signals.py  test_std_aliases.py  test_vision_oldtable.py
tests/e2e/: conftest.py  test_ingest.py  test_logpanel.py  test_rag.py  test_review.py  test_signal.py  test_smoke.py  test_stepper.py
tests/e2e/fixtures/: sample_small.txt
ui/: common.py  index.py  ingest.py  rag.py  review.py  signal.py
