[project]
name = "k-green-signal"
version = "0.1.0"
description = "대한민국 친환경 소비 인지도 실시간 신호등 — 친환경 인지도 조사 PDF를 근거 기반 정형 데이터셋으로 통합하는 파이프라인"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.43.0",
    "pymupdf4llm>=1.27.2.3",
    "pypdf>=6.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120          # 한글 주석·긴 로그 포맷 문자열이 많아 88 은 과도한 줄바꿈을 유발
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# 테스트는 PROJECT_ROOT 를 sys.path 에 넣은 뒤 rag 를 import 하는 패턴이라
# E402(모듈 import 가 파일 최상단이 아님)를 피할 수 없다.
"tests/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: 실제 OpenAI 를 호출하는 테스트 (기본 skip — RAG_FAKE_LLM 미사용)",
]
# 기본은 빠르고 결정적인 테스트만(-m 'not slow'). 실패 시 trace/스크린샷 보관.
addopts = "-m 'not slow' --tracing=retain-on-failure --screenshot=only-on-failure --output=test-results"
